---
source: crates/parser/tests/statement_parser_test.rs
description: "SELECT city, count(*) FILTER (WHERE temp_lo < 45), max(temp_lo)\n    FROM weather\n    GROUP BY city;"
---
Parse {
    cst: SourceFile@0..99
      SelectStmt@0..99
        Select@0..6 "SELECT"
        Whitespace@6..7 " "
        ResTarget@7..11
          ColumnRef@7..11
            Ident@7..11 "city"
        Ascii44@11..12 ","
        Whitespace@12..13 " "
        ResTarget@13..48
          FuncCall@13..48
            Ident@13..18 "count"
            Ascii40@18..19 "("
            Ascii42@19..20 "*"
            Ascii41@20..21 ")"
            Whitespace@21..22 " "
            Filter@22..28 "FILTER"
            Whitespace@28..29 " "
            Ascii40@29..30 "("
            Where@30..35 "WHERE"
            Whitespace@35..36 " "
            AExpr@36..48
              ColumnRef@36..43
                Ident@36..43 "temp_lo"
              Whitespace@43..44 " "
              Ascii60@44..45 "<"
              Whitespace@45..46 " "
              AConst@46..48
                Iconst@46..48 "45"
        Ascii41@48..49 ")"
        Ascii44@49..50 ","
        Whitespace@50..51 " "
        ResTarget@51..62
          FuncCall@51..62
            Ident@51..54 "max"
            Ascii40@54..55 "("
            ColumnRef@55..62
              Ident@55..62 "temp_lo"
        Ascii41@62..63 ")"
        Newline@63..64 "\n"
        Whitespace@64..68 "    "
        From@68..72 "FROM"
        Whitespace@72..73 " "
        RangeVar@73..80
          Ident@73..80 "weather"
        Newline@80..81 "\n"
        Whitespace@81..85 "    "
        GroupP@85..90 "GROUP"
        Whitespace@90..91 " "
        By@91..93 "BY"
        Whitespace@93..94 " "
        ColumnRef@94..98
          Ident@94..98 "city"
        Ascii59@98..99 ";"
    ,
    errors: [],
    stmts: [
        RawStmt {
            stmt: SelectStmt(
                SelectStmt {
                    distinct_clause: [],
                    into_clause: None,
                    target_list: [
                        Node {
                            node: Some(
                                ResTarget(
                                    ResTarget {
                                        name: "",
                                        indirection: [],
                                        val: Some(
                                            Node {
                                                node: Some(
                                                    ColumnRef(
                                                        ColumnRef {
                                                            fields: [
                                                                Node {
                                                                    node: Some(
                                                                        String(
                                                                            String {
                                                                                sval: "city",
                                                                            },
                                                                        ),
                                                                    ),
                                                                },
                                                            ],
                                                            location: 7,
                                                        },
                                                    ),
                                                ),
                                            },
                                        ),
                                        location: 7,
                                    },
                                ),
                            ),
                        },
                        Node {
                            node: Some(
                                ResTarget(
                                    ResTarget {
                                        name: "",
                                        indirection: [],
                                        val: Some(
                                            Node {
                                                node: Some(
                                                    FuncCall(
                                                        FuncCall {
                                                            funcname: [
                                                                Node {
                                                                    node: Some(
                                                                        String(
                                                                            String {
                                                                                sval: "count",
                                                                            },
                                                                        ),
                                                                    ),
                                                                },
                                                            ],
                                                            args: [],
                                                            agg_order: [],
                                                            agg_filter: Some(
                                                                Node {
                                                                    node: Some(
                                                                        AExpr(
                                                                            AExpr {
                                                                                kind: AexprOp,
                                                                                name: [
                                                                                    Node {
                                                                                        node: Some(
                                                                                            String(
                                                                                                String {
                                                                                                    sval: "<",
                                                                                                },
                                                                                            ),
                                                                                        ),
                                                                                    },
                                                                                ],
                                                                                lexpr: Some(
                                                                                    Node {
                                                                                        node: Some(
                                                                                            ColumnRef(
                                                                                                ColumnRef {
                                                                                                    fields: [
                                                                                                        Node {
                                                                                                            node: Some(
                                                                                                                String(
                                                                                                                    String {
                                                                                                                        sval: "temp_lo",
                                                                                                                    },
                                                                                                                ),
                                                                                                            ),
                                                                                                        },
                                                                                                    ],
                                                                                                    location: 36,
                                                                                                },
                                                                                            ),
                                                                                        ),
                                                                                    },
                                                                                ),
                                                                                rexpr: Some(
                                                                                    Node {
                                                                                        node: Some(
                                                                                            AConst(
                                                                                                AConst {
                                                                                                    isnull: false,
                                                                                                    location: 46,
                                                                                                    val: Some(
                                                                                                        Ival(
                                                                                                            Integer {
                                                                                                                ival: 45,
                                                                                                            },
                                                                                                        ),
                                                                                                    ),
                                                                                                },
                                                                                            ),
                                                                                        ),
                                                                                    },
                                                                                ),
                                                                                location: 44,
                                                                            },
                                                                        ),
                                                                    ),
                                                                },
                                                            ),
                                                            over: None,
                                                            agg_within_group: false,
                                                            agg_star: true,
                                                            agg_distinct: false,
                                                            func_variadic: false,
                                                            funcformat: CoerceExplicitCall,
                                                            location: 13,
                                                        },
                                                    ),
                                                ),
                                            },
                                        ),
                                        location: 13,
                                    },
                                ),
                            ),
                        },
                        Node {
                            node: Some(
                                ResTarget(
                                    ResTarget {
                                        name: "",
                                        indirection: [],
                                        val: Some(
                                            Node {
                                                node: Some(
                                                    FuncCall(
                                                        FuncCall {
                                                            funcname: [
                                                                Node {
                                                                    node: Some(
                                                                        String(
                                                                            String {
                                                                                sval: "max",
                                                                            },
                                                                        ),
                                                                    ),
                                                                },
                                                            ],
                                                            args: [
                                                                Node {
                                                                    node: Some(
                                                                        ColumnRef(
                                                                            ColumnRef {
                                                                                fields: [
                                                                                    Node {
                                                                                        node: Some(
                                                                                            String(
                                                                                                String {
                                                                                                    sval: "temp_lo",
                                                                                                },
                                                                                            ),
                                                                                        ),
                                                                                    },
                                                                                ],
                                                                                location: 55,
                                                                            },
                                                                        ),
                                                                    ),
                                                                },
                                                            ],
                                                            agg_order: [],
                                                            agg_filter: None,
                                                            over: None,
                                                            agg_within_group: false,
                                                            agg_star: false,
                                                            agg_distinct: false,
                                                            func_variadic: false,
                                                            funcformat: CoerceExplicitCall,
                                                            location: 51,
                                                        },
                                                    ),
                                                ),
                                            },
                                        ),
                                        location: 51,
                                    },
                                ),
                            ),
                        },
                    ],
                    from_clause: [
                        Node {
                            node: Some(
                                RangeVar(
                                    RangeVar {
                                        catalogname: "",
                                        schemaname: "",
                                        relname: "weather",
                                        inh: true,
                                        relpersistence: "p",
                                        alias: None,
                                        location: 73,
                                    },
                                ),
                            ),
                        },
                    ],
                    where_clause: None,
                    group_clause: [
                        Node {
                            node: Some(
                                ColumnRef(
                                    ColumnRef {
                                        fields: [
                                            Node {
                                                node: Some(
                                                    String(
                                                        String {
                                                            sval: "city",
                                                        },
                                                    ),
                                                ),
                                            },
                                        ],
                                        location: 94,
                                    },
                                ),
                            ),
                        },
                    ],
                    group_distinct: false,
                    having_clause: None,
                    window_clause: [],
                    values_lists: [],
                    sort_clause: [],
                    limit_offset: None,
                    limit_count: None,
                    limit_option: Default,
                    locking_clause: [],
                    with_clause: None,
                    op: SetopNone,
                    all: false,
                    larg: None,
                    rarg: None,
                },
            ),
            range: 0..98,
        },
    ],
}
